Mise en place de la connexion avec JWT et ajout des données des communes en base